--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/g/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/g/index.xhtml
@@ -18,9 +18,9 @@
         <div class="fixed-flex-layout-left" style="margin-left: 20px">
             <div data-bind="ntsPanel:{width: '200px', height: '300px', direction: 'right', showIcon: false, visible: true}">
                 <div>
-                    <button id="G1_3" data-bind="click: openJScreen, enable: enable: !enableNew()">#{i18n.getText('QMM020_13')}</button>
+                    <button id="G1_3" data-bind="click: openJScreen, enable: !enableNew()">#{i18n.getText('QMM020_13')}</button>
 
-                    <button id="G1_4" data-bind="click: openKScreen, enable: enable: enableEdit()" style="float: right">#{i18n.getText('QMM020_14')}</button>
+                    <button id="G1_4" data-bind="click: openKScreen, enable: enableEdit()" style="float: right">#{i18n.getText('QMM020_14')}</button>
                 </div>
 
                 <div style="margin-top: 10px">
