Fix bug tabindex

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/038/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/038/a/index.xhtml
@@ -38,7 +38,7 @@
                 <button  id="A2_4"  data-bind="click: findByEmployee" tabindex="4">#{i18n.getText('QMM038_5')}</button>
             </div>
             <div>
-                <div id="com-ccg001" tabindex="5"></div>
+                <div id="com-ccg001"></div>
                 <ui:include src="../a/contents.xhtml" />
             </div>
 
