--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/038/a/contents.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/038/a/contents.xhtml
@@ -3,7 +3,7 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:com="http://xmlns.jcp.org/jsf/component"
 	xmlns:h="http://xmlns.jcp.org/jsf/html">
-	<div style="padding: 19px; margin-left: 70px;" tabindex="-1">
+	<div style="padding: 19px; margin-left: 70px; width: 50px" tabindex="-1">
 		<table id="gridStatement" tabindex="-1"></table>
 	</div>
 </ui:composition>
