--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/f/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/f/index.xhtml
@@ -9,12 +9,13 @@
         <div class="fixed-flex-layout-left" style="margin-left: 20px">
             <div data-bind="ntsPanel:{width: '200px', height: '300px', direction: 'right', showIcon: false, visible: true}">
                 <div>
-                    <button id="F1_3" data-bind="click: openJScreen, enable: !enableNew() ">#{i18n.getText('QMM020_13')}</button>
-                    <button id="F1_4" data-bind="click: openKScreen, enable: enableEdit()" style="float: right">#{i18n.getText('QMM020_14')}</button>
+                    <button id="F1_3" tabindex="2" data-bind="click: openJScreen, enable: !enableNew() ">#{i18n.getText('QMM020_13')}</button>
+                    <button id="F1_4" tabindex="3" data-bind="click: openKScreen, enable: enableEdit()" style="float: right">#{i18n.getText('QMM020_14')}</button>
                 </div>
 
                 <div style="margin-top: 10px">
-                    <table  id="F1_5"  data-bind="ntsGridList: {
+                    <table  id="F1_5"  tabindex="4" data-bind="ntsGridList: {
+                                            name: '#QMM020_37',
                                             height: 250,
                                             dataSource: listStateCorrelationHisPosition,
                                             primaryKey: 'hisId',
@@ -41,7 +42,7 @@
             </div>
 
             <div>
-                <div style="width: 260px" data-bind =
+                <div style="width: 260px" tabindex="5"  data-bind =
                         "ntsSearchBox: {
                         targetKey: 'id',
                         comId: 'F3_1',
@@ -50,7 +51,7 @@
 	                    fields: ['masterCode', 'categoryName'],
 	                    mode: 'igGrid'}" />
 
-                <table id="F3_1" ></table>
+                <table id="F3_1" tabindex="6" ></table>
 
             </div>
         </div>
