QMM020 UT H screen

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/e/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/e/index.xhtml
@@ -8,10 +8,10 @@
                     data-bind="enable: $root.errors.isEmpty">#{i18n.getText('QMM020_2')}</button>
 
             <button id="A1_3" tabindex="3"
-                    data-bind="enable: false">#{i18n.getText('QMM020_3')}</button>
+                    data-bind="enable: true">#{i18n.getText('QMM020_3')}</button>
 
             <button id="A1_4" tabindex="4"
-                    data-bind=" enable: false">#{i18n.getText('QMM020_4')}</button>
+                    data-bind=" enable: true">#{i18n.getText('QMM020_4')}</button>
 
     </div>
     <div style="margin-top: 15px;" class="contents-area fixed-flex-layout">
