--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/g/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/g/index.xhtml
@@ -11,7 +11,7 @@
                     data-bind="enable: true">#{i18n.getText('QMM020_3')}</button>
 
             <button id="A1_4" tabindex="4"
-                    data-bind=" enable: false">#{i18n.getText('QMM020_4')}</button>
+                    data-bind=" enable: true">#{i18n.getText('QMM020_4')}</button>
         </div>
 
     <div style="margin-top: 15px;" class="contents-area fixed-flex-layout">
