--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/f/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/f/index.xhtml
@@ -9,8 +9,8 @@
         <div class="fixed-flex-layout-left" style="margin-left: 20px">
             <div data-bind="ntsPanel:{width: '200px', height: '300px', direction: 'right', showIcon: false, visible: true}">
                 <div>
-                    <button id="F1_3" tabindex="2" data-bind="click: openJScreen, enable: !enableNew() ">#{i18n.getText('QMM020_13')}</button>
-                    <button id="F1_4" tabindex="3" data-bind="click: openKScreen, enable: enableEdit()" style="float: right">#{i18n.getText('QMM020_14')}</button>
+                    <button id="F1_3" tabindex="2" data-bind="click: openJScreen, timeClick: 800, enable: !enableNew() ">#{i18n.getText('QMM020_13')}</button>
+                    <button id="F1_4" tabindex="3" data-bind="click: openKScreen, timeClick: 800, enable: enableEdit()" style="float: right">#{i18n.getText('QMM020_14')}</button>
                 </div>
 
                 <div style="margin-top: 10px">
