--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kwr/001/d/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kwr/001/d/index.xhtml
@@ -45,6 +45,9 @@
 							{ prop: 'name', length: 8 },
 						]}"></div>
 				</div>
+				<div>
+					<label>#{i18n.getText('KWR001_123')}</label>
+				</div>
 				<div class="row">
 					<!-- D1_5 -->
 					<div class="name" data-bind="ntsFormLabel: {constraint: ['OutputItemSettingCode', 'OutputItemSettingName'], required: true}">#{i18n.getText('KWR001_80')}</div>
