--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/002/b/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/002/b/index.xhtml
@@ -41,8 +41,8 @@
 						showCheckBox: true}"></table>
 			</div>
 			<div id="functions-area-bottom">
-				<button tabindex = "3" class="x-large danger" data-bind="click: deleteList">#{i18n.getText('QMM002_7')}</button>
-				<button tabindex = "4" data-bind="click: cancel">#{i18n.getText('QMM002_21')}</button>
+				<button tabindex = "3" class="x-large danger" data-bind="click: deleteList, timeClick: 500">#{i18n.getText('QMM002_7')}</button>
+				<button tabindex = "4" data-bind="click: cancel, timeClick: 500">#{i18n.getText('QMM002_21')}</button>
 			</div>
 			<style>
 				#B1_4_container{clear: both}
