--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/002/c/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/002/c/index.xhtml
@@ -15,8 +15,8 @@
 		</ui:define>
 		<ui:define name="content">
 			<div id="functions-area">
-				<button tabindex = "1" data-bind="click: execute">#{i18n.getText('QMM002_22')}</button>
-				<button tabindex = "2" data-bind="click: close">#{i18n.getText('QMM002_23')}</button>
+				<button tabindex = "1" data-bind="click: execute, timeClick: 500">#{i18n.getText('QMM002_22')}</button>
+				<button tabindex = "2" data-bind="click: close, timeClick: 500">#{i18n.getText('QMM002_23')}</button>
 			</div>
 			<div class="contents-area dialog-content" style="padding: 10px 25px">
 				<div style="margin-bottom: 10px">
