fix css text resource

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kwr/001/d/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kwr/001/d/index.xhtml
@@ -46,7 +46,7 @@
 						]}"></div>
 				</div>
 				<div>
-					<label>#{i18n.getText('KWR001_123')}</label>
+					<label class ="pad_left_50">#{i18n.getText('KWR001_123')}</label>
 				</div>
 				<div class="row">
 					<!-- D1_5 -->
