--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/b/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/b/index.xhtml
@@ -4,7 +4,7 @@
                 <div id="A">
                         <span style="position: absolute;margin-left: -40px;font-size: 25px;">#{i18n.getText('QMM020_5')}</span>
                         <button style ="margin-left:48px" id="A1_1" tabindex="1" class="proceed"
-                                data-bind="click: register, enable: $root.errors.isEmpty() &amp;&amp; enableRegisterButton()">#{i18n.getText('QMM020_1')}</button>
+                                data-bind="click: registerStateLinkSettingCompany, enable: $root.errors.isEmpty() &amp;&amp; enableRegisterButton()">#{i18n.getText('QMM020_1')}</button>
 
                         <button id="A1_2" tabindex="2"
                                 data-bind="enable: $root.errors.isEmpty">#{i18n.getText('QMM020_2')}</button>
