--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/038/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/038/a/index.xhtml
@@ -32,7 +32,7 @@
             <button id="A1_1" class="proceed"  tabindex="1" style="margin-left: 110px;" data-bind="click: updateStatelmentItemName" >#{i18n.getText('QMM038_2')}</button>
             <button  id="A1_2" data-bind="enable: false" tabindex="2">#{i18n.getText('QMM038_3')}</button>
         </div>
-        <div id="contents-area"  style="margin-left: 15px;">
+        <div id="contents-area" >
             <div style="margin-left: 90px; border: 0.2px solid; border-color: #DCDCDC; width: 300px; padding: 14px;border-style:solid;">
                 <div id="A2_2" data-bind="ntsFormLabel: { constraint: '', required: true }">#{i18n.getText('QMM038_4')}</div>
                 <div id="A2_3" tabindex="3" data-bind="ntsDatePicker: {value: giveCurrTreatYear, dateFormat: 'yearmonth', name: '#[QMM038_4]',required: true}"></div>
