--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/h/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/h/index.xhtml
@@ -16,12 +16,13 @@
 
     </div>
     <div style="margin-top: 15px;" class="contents-area ">
+        <div id="com-ccg001"></div>
         <div id = "H1_1" style="margin-left: 70px;">
             <div tabindex="1" id="emp-component" style="margin-left: 10px;"></div>
         </div>
-        <div id="H1_2">
-            <div id="com-ccg001"></div>
-        </div>
+  <!--      <div id="H1_2">
+
+        </div>-->
         <div class="fixed-flex-layout-left" style="margin-left: 90px;margin-top: 20px; float: left;">
             <div data-bind="ntsPanel:{width: '200px', height: '300px', direction: 'right', showIcon: false, visible: true}">
                 <div>
@@ -55,7 +56,7 @@
             <div class="control-group" style="margin-top: 20px;">
                 <div data-bind="ntsFormLabel: {}">
                     <span class="label">#{i18n.getText('QMM020_20')}</span>
-                    <button style="margin-left: 15px;" data-bind="click: selectSalary ">#{i18n.getText('QMM020_21')}</button>
+                    <button style="margin-left: 15px;" data-bind="click: selectSalary, enable: !enableRegis() ">#{i18n.getText('QMM020_21')}</button>
                     <span style="margin-left: 20px;" data-bind="text: salaryCode"></span>
                     <span style="margin-left: 10px;" data-bind="text: salaryName"></span>
                 </div>
@@ -64,7 +65,7 @@
             <div class="control-group" style="margin-top: 15px;">
                 <div data-bind="ntsFormLabel: {}">
                     <span class="label">#{i18n.getText('QMM020_20')}</span>
-                    <button style="margin-left: 15px;" data-bind=" click: selectBonus">#{i18n.getText('QMM020_21')}</button>
+                    <button style="margin-left: 15px;" data-bind=" click: selectBonus, enable: !enableRegis() ">#{i18n.getText('QMM020_21')}</button>
                     <span style="margin-left: 20px;" data-bind="text: bonusCode"></span>
                     <span style="margin-left: 10px;" data-bind="text: bonusName"></span>
                 </div>
