--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/013/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/013/a/index.xhtml
@@ -98,7 +98,7 @@
 								#{i18n.getText('QMM013_14')}
 							</div>
 							<!-- 廃止説明 -->
-							<button id="A3_5" data-bind="ntsHelpButton: {image: '../resource/QMM013_1.png', position: 'bottom right', enable: true }">?</button>
+							<button id="A3_5" tabindex="-1" data-bind="ntsHelpButton: {image: '../resource/QMM013_1.png', position: 'bottom right', enable: true }">?</button>
 						</div>
 						<div class="valign-center control-group">
 							<!-- 略名 -->
